# BLOOM

./: .gitignore  README copy.md  README.md  manage.py  pyproject.toml
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: development.py  production.py
templates/: base.html  home.html
templates/registration/: login.html  signup.html
